adding opencart latest version v4, note multivendor.ocmod.zip works on 3.0.x only

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -19,6 +19,8 @@ services:
       MYSQL_DATABASE: opencart
       MYSQL_USER: user
       MYSQL_PASSWORD: password
+    volume:
+      - db_data: /var/lib/mysql/opencart
     ports:
       - "3306:3306"
     
