--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,4 +1,4 @@
-version: '3.8'
+version: '3'
 services:
   web:
     build: .
@@ -6,8 +6,6 @@ services:
       - "80:80"
     depends_on:
       - db
-    # volumes:
-    #   - ./htdocs:/var/www/html
     environment:
       - APACHE_DOCUMENT_ROOT=/var/www/html
 
@@ -19,11 +17,10 @@ services:
       MYSQL_DATABASE: opencart
       MYSQL_USER: user
       MYSQL_PASSWORD: password
-    volume:
-      - db_data: /var/lib/mysql/opencart
+    volumes:
+      - db_data:/var/lib/mysql
     ports:
       - "3306:3306"
-    
 
   phpmyadmin:
     image: phpmyadmin/phpmyadmin
